fix: white space

--- a/src/page/home/styles.module.scss
+++ b/src/page/home/styles.module.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  input[type="tel"],
+  input[type="text"],
   textarea,
   select {
     &:hover,
@@ -48,7 +48,7 @@
     }
   }
 
-  input[type="tel"],
+  input[type="text"],
   select {
     padding: 8px;
     border-radius: 4px;
